# bulk_manager_django

./: .gitignore  README.md  pyproject.toml
bulk_manager_django/: BulkManager.py
examples/demo/: requirements.txt
examples/demo/demo/: settings.py
examples/demo/myapp/: models.py
examples/demo/myapp/scripts/: example1.py  example2.py  example3.py
tests/: test_bulk_manager_django.py
